--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,8 @@
-[build-system]
-requires = ["setuptools>=69.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "treinamento-python-com-ia"
 version = "0.1.0"
 description = "Material de treinamento 4h: pipeline de dados a inferência com transformers"
-authors = [
-  { name = "Instrutor", email = "instrutor@example.com" }
-]
+authors = [{ name = "Instrutor", email = "instrutor@example.com" }]
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11"
@@ -22,29 +16,23 @@ classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-
-# Dependências principais (pin leve para reprodutibilidade sem travar patch)
-# Ajuste conforme necessidade em produção.
-[project.dependencies]
-numpy = ">=2.3,<2.4"
-pandas = ">=2.3,<2.4"
-SQLAlchemy = ">=2.0,<2.1"
-transformers = ">=4.44,<4.45"
-huggingface-hub = ">=0.24,<0.25"
-python-dotenv = ">=1.0,<2.0"
-rich = ">=13.7,<14.0"
-
-[project.optional-dependencies]
-dev = [
-  "pytest>=8.2,<9.0",
-  "mypy>=1.10,<1.999",
-  "types-requests",
-  "ruff>=0.6.0,<0.7.0"
+dependencies = [
+    "huggingface-hub>=0.35.3",
+    "numpy>=2.3.3",
+    "pandas>=2.3.3",
+    "python-dotenv>=1.1.1",
+    "rich>=14.1.0",
+    "sqlalchemy>=2.0.43",
+    "transformers>=4.56.2",
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["*"]
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+    "pytest>=8.4.2",
+    "ruff>=0.13.2",
+    "types-requests>=2.32.4.20250913",
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -61,6 +49,11 @@ ignore_missing_imports = true
 line-length = 100
 select = ["E", "F", "I", "UP", "N", "B"]
 ignore = ["E501"]
+
+[tool.uv.workspace]
+members = [
+    "project",
+]
 
 [project.scripts]
 run-insight = "automation.cli:main"
